# tiny-server-helper

./: .gitignore  Cargo.toml  Makefile
metrics-server/: Cargo.toml
metrics-server/src/: apps.rs  log_reader.rs  main.rs  metrics.rs  system.rs
monitor-tui/: .gitignore  Cargo.toml  sites.toml  sites.toml.example
monitor-tui/src/: app.rs  config.rs  history.rs  main.rs  metrics_poller.rs
monitor-tui/src/alerts/: detector.rs  history.rs  mod.rs  notifier.rs
monitor-tui/src/checker/: http.rs  mod.rs  types.rs
monitor-tui/src/ui/: alert_detail.rs  alerts.rs  dashboard.rs  detail.rs  help.rs  mod.rs  server.rs  status_bar.rs  theme.rs
systemd/: app@.service  internal@.service
