[package]
name = "metrics-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metrics-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.28", features = ["fs"] }
