[package]
name = "monitor-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
ratatui = "0.26"
crossterm = "0.27"
thiserror = "1.0"
indexmap = "2.1"
